added 2nd exercise

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h1>AWS Security Fundamentals</h1>
         <ul class="nav nav-pills nav-stacked">
           <li role="presentation"><a href="exercise1.html">Exercise 1: IAM User</a></li>
+          <li role="presentation"><a href="exercise2.html">Exercise 2: IAM Policy</a></li>
         </ul>
       </div>
     </div>
