added 3rd exercise

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
       <div class="row">
         <h1>AWS Security Fundamentals</h1>
         <ul class="nav nav-pills nav-stacked">
-          <li role="presentation"><a href="exercise1.html">Exercise 1: IAM User</a></li>
-          <li role="presentation"><a href="exercise2.html">Exercise 2: IAM Policy</a></li>
+          <li role="presentation"><a href="./exercise1.html">Exercise 1: IAM User</a></li>
+          <li role="presentation"><a href="./exercise2.html">Exercise 2: IAM Policy</a></li>
+          <li role="presentation"><a href="./exercise3.html">Exercise 3: CloudTrail</a></li>
         </ul>
       </div>
     </div>
-
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
