added exercise 4 and clean up

--- a/exercise1.html
+++ b/exercise1.html
@@ -28,14 +28,14 @@
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Create IAM User with Login Profile and Access Key
+                  Task 1: Create IAM User with Login Profile and Access Key
                 </a>
               </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <ol>
-                  <li>Visit <a href="https://console.aws.amazon.com/iam/home#/users">https://console.aws.amazon.com/iam/home#/users</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/iam/home#/users" target="blank">https://console.aws.amazon.com/iam/home#/users</a></li>
                   <li>Click <strong>Add user</strong> button<img src="./exercise1_1.png" class="img-responsive"></li>
                   <li>Set <strong>User name</strong>, enable <strong>Programmatic access</strong> to generate an Access Key, enable <strong>AWS Management Console access</strong> to create a Login Profile<img src="./exercise1_2.png" class="img-responsive"></li>
                   <li>Manage the IAM Group later<img src="./exercise1_3.png" class="img-responsive"></li>
@@ -50,22 +50,22 @@
             <div class="panel-heading" role="tab" id="headingTwo">
               <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Enable MFA
+                  Task 2: Enable MFA
                 </a>
               </h4>
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
                 <ol>
-                  <li>Visit <a href="https://console.aws.amazon.com/iam/home#/users">https://console.aws.amazon.com/iam/home#/users</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/iam/home#/users" target="blank">https://console.aws.amazon.com/iam/home#/users</a></li>
                   <li>Click your user name<img src="./exercise1_6.png" class="img-responsive"></li>
                   <li>Select <strong>Security Credentials</strong> tab, click the pencil icon next to <strong>Assigned MFA device</strong><img src="./exercise1_7.png" class="img-responsive"></li>
                   <li><img src="./exercise1_8.png" class="img-responsive"></li>
                   <li><img src="./exercise1_9.png" class="img-responsive"></li>
                   <li><img src="./exercise1_10.png" class="img-responsive"></li>
                   <li>Install Google Authenticator on your mobile device:<ul>
-                    <li><a href="https://www.google.de/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0ahUKEwiJwMrYtvTUAhVRlxQKHU_cDKIQFggpMAE&url=https%3A%2F%2Fitunes.apple.com%2Fde%2Fapp%2Fgoogle-authenticator%2Fid388497605%3Fmt%3D8&usg=AFQjCNG-SAjiUB7nkssU0dOo4MVDjR1PqQ" target="blank">iTunes App Store</a></li>
-                    <li><a href="https://www.google.de/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwiJwMrYtvTUAhVRlxQKHU_cDKIQFggiMAA&url=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.google.android.apps.authenticator2%26hl%3Dde&usg=AFQjCNEP4vq0iRsoESNifBAlu2ksgOwGFQ" target="blank">Google Play Store</a></li>
+                    <li><a href="https://itunes.apple.com/de/app/google-authenticator/id388497605?mt=8" target="blank">iTunes App Store</a></li>
+                    <li><a href="https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2" target="blank">Google Play Store</a></li>
                   </ul></li>
                   <li>Open Google Authenticator and add a new token by scanning the QR code in your browser window<img src="./exercise1_11.png" class="img-responsive"></li>
                   <li>Enter the first token and wait until a new token is generated. Enter the second token as well<img src="./exercise1_12.png" class="img-responsive"></li>
@@ -86,7 +86,7 @@
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <ol>
-                  <li>Visit <a href="https://console.aws.amazon.com/iam/home#/account_settings">https://console.aws.amazon.com/iam/home#/account_settings</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/iam/home#/account_settings" target="blank">https://console.aws.amazon.com/iam/home#/account_settings</a></li>
                   <li><img src="./exercise1_14.png" class="img-responsive"></li>
                 </ol>
               </div>
