--- a/exercise3.html
+++ b/exercise3.html
@@ -28,14 +28,14 @@
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Enable CloudTrail
+                  Task 1: Enable CloudTrail
                 </a>
               </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <ol>
-                  <li>Visit <a href="https://console.aws.amazon.com/cloudtrail/home?region=us-east-1">https://console.aws.amazon.com/cloudtrail/home?region=us-east-1</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/cloudtrail/home?region=us-east-1" target="blank">https://console.aws.amazon.com/cloudtrail/home?region=us-east-1</a></li>
                   <li><img src="./exercise3_1.png" class="img-responsive"></li>
                   <li>Set a <strong>Trail name</strong> and a <strong>S3 Bucket</strong> (don't use the previous bucket name!). Stay with the defaults for the other fields.<img src="./exercise3_2.png" class="img-responsive"></li>
                 </ol>
@@ -46,17 +46,17 @@
             <div class="panel-heading" role="tab" id="headingTwo">
               <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Create dummy API calls
+                  Task 2: Create dummy API calls
                 </a>
               </h4>
             </div>
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
               <div class="panel-body">
                 <ol>
-                  <li>Visit <a href="https://console.aws.amazon.com/ec2/v2/home?region=us-east-1">https://console.aws.amazon.com/ec2/v2/home?region=us-east-1</a></li>
-                  <li>Visit <a href="https://console.aws.amazon.com/iam/home">https://console.aws.amazon.com/iam/home</a></li>
-                  <li>Visit <a href="https://console.aws.amazon.com/rds/home?region=us-east-1">https://console.aws.amazon.com/rds/home?region=us-east-1</a></li>
-                  <li>Visit <a href="https://console.aws.amazon.com/s3/home?region=us-east-1">https://console.aws.amazon.com/s3/home?region=us-east-1</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/ec2/v2/home?region=us-east-1" target="blank">https://console.aws.amazon.com/ec2/v2/home?region=us-east-1</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/iam/home" target="blank">https://console.aws.amazon.com/iam/home</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/rds/home?region=us-east-1" target="blank">https://console.aws.amazon.com/rds/home?region=us-east-1</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/s3/home?region=us-east-1" target="blank">https://console.aws.amazon.com/s3/home?region=us-east-1</a></li>
                   
                 </ol>
               </div>
@@ -66,14 +66,14 @@
             <div class="panel-heading" role="tab" id="headingThree">
               <h4 class="panel-title">
                 <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Look at results
+                  Task 3: Look at the results
                 </a>
               </h4>
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
                 <ol>
-                  <li>Visit <a href="https://console.aws.amazon.com/cloudtrail/home?region=us-east-1#/events">https://console.aws.amazon.com/cloudtrail/home?region=us-east-1#/events</a></li>
+                  <li>Visit <a href="https://console.aws.amazon.com/cloudtrail/home?region=us-east-1#/events" target="blank">https://console.aws.amazon.com/cloudtrail/home?region=us-east-1#/events</a></li>
                   <li>It may take a few minutes until you see the first events!</li>
                   <li><img src="./exercise3_3.png" class="img-responsive"></li>
                   <li>Explore the S3 bucket and look at at least one file that contains the events as well.</li>
@@ -91,7 +91,7 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
-                <a href="http://docs.aws.amazon.com/awscloudtrail/latest/userguide/logging-management-and-data-events-with-cloudtrail.html#logging-data-events">http://docs.aws.amazon.com/awscloudtrail/latest/userguide/logging-management-and-data-events-with-cloudtrail.html#logging-data-events</a>
+                <a href="http://docs.aws.amazon.com/awscloudtrail/latest/userguide/logging-management-and-data-events-with-cloudtrail.html#logging-data-events" target="blank">http://docs.aws.amazon.com/awscloudtrail/latest/userguide/logging-management-and-data-events-with-cloudtrail.html#logging-data-events</a>
               </div>
             </div>
           </div>
