--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li role="presentation"><a href="./exercise1.html">Exercise 1: IAM User</a></li>
           <li role="presentation"><a href="./exercise2.html">Exercise 2: IAM Policy</a></li>
           <li role="presentation"><a href="./exercise3.html">Exercise 3: CloudTrail</a></li>
-          <li role="presentation"><a href="./exercise4.html">Exercise 4: Encrypt at Rest</a></li>
+          <li role="presentation"><a href="./exercise4.html">Exercise 4: Encrypt Data at Rest</a></li>
           <li role="presentation"><a href="./cleanup.html">Clean up</a></li>
         </ul>
       </div>
