--- a/exercise3.html
+++ b/exercise3.html
@@ -36,8 +36,8 @@
               <div class="panel-body">
                 <ol>
                   <li>Visit <a href="https://console.aws.amazon.com/cloudtrail/home?region=us-east-1" target="blank">https://console.aws.amazon.com/cloudtrail/home?region=us-east-1</a></li>
-                  <li><img src="./exercise3_1.png" class="img-responsive"></li>
-                  <li>Set a <strong>Trail name</strong> and a <strong>S3 Bucket</strong> (don't use the previous bucket name!). Stay with the defaults for the other fields.<img src="./exercise3_2.png" class="img-responsive"></li>
+                  <li><br><img src="./exercise3_1.png" class="img-thumbnail img-responsive"></li>
+                  <li>Set a <strong>Trail name</strong> and a <strong>S3 Bucket</strong> (don't use the previous bucket name and remember that bucket names must be globally unique). Stay with the defaults for the other fields (do not enable any data events!).<br><img src="./exercise3_2.png" class="img-thumbnail img-responsive"></li>
                 </ol>
               </div>
             </div>
@@ -74,9 +74,9 @@
               <div class="panel-body">
                 <ol>
                   <li>Visit <a href="https://console.aws.amazon.com/cloudtrail/home?region=us-east-1#/events" target="blank">https://console.aws.amazon.com/cloudtrail/home?region=us-east-1#/events</a></li>
-                  <li>It may take a few minutes until you see the first events!</li>
-                  <li><img src="./exercise3_3.png" class="img-responsive"></li>
-                  <li>Explore the S3 bucket and look at at least one file that contains the events as well.</li>
+                  <li>It may take a few minutes until you see the first events! There is a refresh button at the top right.</li>
+                  <li><br><img src="./exercise3_3.png" class="img-thumbnail img-responsive"></li>
+                  <li>Explore the S3 bucket. Navigate the "folder structure" and download one of the files that also contain all API activity.</li>
                 </ol>
               </div>
             </div>
@@ -91,7 +91,7 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
-                <a href="http://docs.aws.amazon.com/awscloudtrail/latest/userguide/logging-management-and-data-events-with-cloudtrail.html#logging-data-events" target="blank">http://docs.aws.amazon.com/awscloudtrail/latest/userguide/logging-management-and-data-events-with-cloudtrail.html#logging-data-events</a>
+                For some services (only S3 at the moment) you can also get API calls for data related events: e.g. file was download. Depending on your access patterns this could generate many events! Have a look at the pricing before you activate this on a public S3 bucket!<a href="http://docs.aws.amazon.com/awscloudtrail/latest/userguide/logging-management-and-data-events-with-cloudtrail.html#logging-data-events" target="blank">http://docs.aws.amazon.com/awscloudtrail/latest/userguide/logging-management-and-data-events-with-cloudtrail.html#logging-data-events</a>
               </div>
             </div>
           </div>
