--- a/exercise4.html
+++ b/exercise4.html
@@ -60,7 +60,8 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
-                Use the Management Console to upload with encryption turned on and off.
+                <ol>
+                  <li>Use the Management Console to upload with encryption turned on and off.<br><img src="./exercise4_4.png" class="img-thumbnail img-responsive"></li>
               </div>
             </div>
           </div>
