added json policy documents

--- a/exercise4.html
+++ b/exercise4.html
@@ -45,6 +45,7 @@
                     <li>the Service Specific Condition <code>s3:x-amz-server-side-encryption</code> sounds interesting. Maybe <a href="https://www.google.com/search?q=s3%3Ax-amz-server-side-encryption" target="blank">Google</a> can help?</li>
                     <li><code>AES256</code> means that S3-Managed Encryption Keys should be used</li>
                     <li>The bucket policy has a higher priority than your IAM authorization information!<br><img src="./exercise4_3.png" class="img-thumbnail img-responsive"></li>
+                    <li><a href="./exercise4_bucket_policy.json">Download Bucket Policy</a> and replace BUCKET_NAME placeholder</li>
                   </ul></li>
                 </ol>
               </div>
