--- a/exercise2.html
+++ b/exercise2.html
@@ -70,6 +70,7 @@
                     <li>You also have two <code>*</code> in your Action section. <a href="https://iam.cloudonaut.io/reference/s3.html" target="blank">Checkout what's behind</a> the star and also, if the ARNs are allowed for all <code>Get*</code> and <code>List*</code> actions.</li>
                     <li><code>s3:ListAllMyBuckets</code> only supports <code>*</code> as a resource-level constraint. So you can't use the So you have to add this in a separate statement.</li>
                     <li>The final policy is shown here<br><br><img src="./exercise2_11.png" class="img-thumbnail img-responsive"></li>
+                    <li><a href="./exercise2_iam_policy.json">Download IAM Policy</a> and replace BUCKET_NAME placeholder</li>
                   </ul></li>
                 </ol>
               </div>
