--- a/exercise4.html
+++ b/exercise4.html
@@ -28,14 +28,14 @@
             <div class="panel-heading" role="tab" id="headingOne">
               <h4 class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Task 1: Create S3 Bucket with SSE encryption turned on
+                  Task 1: Create S3 Bucket with SSE encryption turned on for all files in the folder <code>secret</code>
                 </a>
               </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="panel-body">
                 <ol>
-                  <li>Okay, this exercise is hard. It's not possible to create a bucket with SS3 encryption turned on. Sometimes you have to think outside the box. You have to use a bucket policy to only allow uploads that turn on the SSE encryption feature. </li>
+                  <li>Okay, this exercise is hard. It's not possible to create a bucket with SS3 encryption turned on for a specific folder. Only for the whole bucket. Sometimes you have to think outside the box. You have to use a bucket policy to only allow uploads that turn on the SSE encryption feature. </li>
                   <li>Visit <a href="https://console.aws.amazon.com/s3/home?region=us-east-1" target="blank">https://console.aws.amazon.com/s3/home?region=us-east-1</a></li>
                   <li>Click on the bucket you created during exercise 2.</li>
                   <li>Select <strong>Permissions</strong> tab<br><img src="./exercise4_1.png" class="img-thumbnail img-responsive"></li>
