--- a/exercise3.html
+++ b/exercise3.html
@@ -36,7 +36,7 @@
               <div class="panel-body">
                 <ol>
                   <li>Visit <a href="https://console.aws.amazon.com/cloudtrail/home?region=us-east-1" target="blank">https://console.aws.amazon.com/cloudtrail/home?region=us-east-1</a></li>
-                  <li><br><img src="./exercise3_1.png" class="img-thumbnail img-responsive"></li>
+                  <li>Create a Trail<br><img src="./exercise3_1.png" class="img-thumbnail img-responsive"></li>
                   <li>Set a <strong>Trail name</strong> and a <strong>S3 Bucket</strong> (don't use the previous bucket name and remember that bucket names must be globally unique). Stay with the defaults for the other fields (do not enable any data events!).<br><img src="./exercise3_2.png" class="img-thumbnail img-responsive"></li>
                 </ol>
               </div>
