--- a/exercise4.html
+++ b/exercise4.html
@@ -38,13 +38,14 @@
                   <li>Okay, this exercise is hard. It's not possible to create a bucket with SS3 encryption turned on for a specific folder. Only for the whole bucket. Sometimes you have to think outside the box. You have to use a bucket policy to only allow uploads that turn on the SSE encryption feature. </li>
                   <li>Visit <a href="https://console.aws.amazon.com/s3/home?region=us-east-1" target="blank">https://console.aws.amazon.com/s3/home?region=us-east-1</a></li>
                   <li>Click on the bucket you created during exercise 2.</li>
-                  <li>Select <strong>Permissions</strong> tab<br><img src="./exercise4_1.png" class="img-thumbnail img-responsive"></li>
-                  <li>Click <strong>Bucket Policy</strong> button<br><img src="./exercise4_2.png" class="img-thumbnail img-responsive"></li>
+                  <li>Create the folder <code>secret</code><br><img src="./exercise4_1.png" class="img-thumbnail img-responsive"></li>
+                  <li>Select <strong>Permissions</strong> tab<br><img src="./exercise4_2.png" class="img-thumbnail img-responsive"></li>
+                  <li>Click <strong>Bucket Policy</strong> button<br><img src="./exercise4_3.png" class="img-thumbnail img-responsive"></li>
                   <li><ul>
                     <li>If you could deny all unencrypted uploads <code>s3:PutObject</code> that would do the trick. <a href="https://iam.cloudonaut.io/reference/s3/PutObject.html" target="blank">Checkout</a> what's available for the <code>s3:PutObject</code> action.</li>
                     <li>the Service Specific Condition <code>s3:x-amz-server-side-encryption</code> sounds interesting. Maybe <a href="https://www.google.com/search?q=s3%3Ax-amz-server-side-encryption" target="blank">Google</a> can help?</li>
                     <li><code>AES256</code> means that S3-Managed Encryption Keys should be used</li>
-                    <li>The bucket policy has a higher priority than your IAM authorization information!<br><img src="./exercise4_3.png" class="img-thumbnail img-responsive"></li>
+                    <li>The bucket policy has a higher priority than your IAM authorization information!<br><img src="./exercise4_4.png" class="img-thumbnail img-responsive"></li>
                     <li><a href="./exercise4_bucket_policy.json">Download Bucket Policy</a> and replace BUCKET_NAME placeholder</li>
                   </ul></li>
                 </ol>
@@ -62,7 +63,7 @@
             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
               <div class="panel-body">
                 <ol>
-                  <li>Use the Management Console to upload with encryption turned on and off.<br><img src="./exercise4_4.png" class="img-thumbnail img-responsive"></li>
+                  <li>Use the Management Console to upload with encryption turned on and off.<br><img src="./exercise4_5.png" class="img-thumbnail img-responsive"></li>
               </div>
             </div>
           </div>
