--- a/exercise2.html
+++ b/exercise2.html
@@ -37,10 +37,8 @@
                 <ol>
                   <li>Visit <a href="https://console.aws.amazon.com/s3/home?region=us-east-1" target="blank">https://console.aws.amazon.com/s3/home?region=us-east-1</a></li>
                   <li>Click <strong>Create bucket</strong> button<br><img src="./exercise2_1.png" class="img-thumbnail img-responsive"></li>
-                  <li>Set a <strong>Bucket name</strong> and select US East (N. Virginia) <strong>Region</strong>. The bucket name must be globally unique across all AWS users in all regions (I added my name as a suffix). <br><img src="./exercise2_2.png" class="img-thumbnail img-responsive"></li>
-                  <li>Stay with the defaults<br><img src="./exercise2_3.png" class="img-thumbnail img-responsive"></li>
-                  <li>Stay with the defaults<br><img src="./exercise2_4.png" class="img-thumbnail img-responsive"></li>
-                  <li>Review<br><img src="./exercise2_5.png" class="img-thumbnail img-responsive"></li>
+                  <li>Set a <strong>Bucket name</strong> and select US East (N. Virginia) <strong>Region</strong>. The bucket name must be globally unique across all AWS users in all regions (I added my name as a suffix).</li>
+                  <li>Now, create the bucket<br><img src="./exercise2_2.png" class="img-thumbnail img-responsive"></li>
                 </ol>
               </div>
             </div>
